# sarif-rs

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  index.html  robots.txt  rust-toolchain.toml  search_index.en.js  shell.nix  sitemap.xml
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  auto-update.yml  main.yml  sarif.yml  scorecard-analysis.yml
clang-tidy-sarif/: Cargo.toml  README.md  cliff.toml
clang-tidy-sarif/src/: bin.rs
clippy-sarif/: Cargo.toml  README.md  cliff.toml
clippy-sarif/src/: bin.rs
clippy-sarif/tests/: version-numbers.rs
cppcheck-sarif/: Cargo.toml  README.md
cppcheck-sarif/src/: bin.rs
deny-sarif/: Cargo.toml  LICENSE  README.md  cliff.toml
deny-sarif/src/: bin.rs
deny-sarif/tests/: version-numbers.rs
docs/: config.toml  index.html
docs/content/: _index.md
docs/content/docs/getting-started/: _index.md  introduction.md
docs/content/docs/help/: rust_docs.md
docs/getting-started/: index.html
docs/getting-started/introduction/: index.html
docs/help/: index.html
docs/help/rust-docs/: index.html
hadolint-sarif/: Cargo.toml  README.md  cliff.toml
hadolint-sarif/src/: bin.rs
miri-sarif/: Cargo.toml  README.md  cliff.toml
miri-sarif/src/: bin.rs
nix/: clang.nix  cppcheck.nix  hadolint.nix  pre-commit.nix  rust.nix  sarif-fmt.nix  shellcheck.nix  sources.json  zola.nix
sarif-fmt/: Cargo.toml  README.md  build.rs  cliff.toml  shell.nix
sarif-fmt/src/: bin.rs  github.rs
sarif-fmt/src/github/: mod.rs
sarif-fmt/src/github/problem-matchers/: sarif-plain-matcher.json
sarif-fmt/src/problem-matchers/: sarif-pretty-matcher.json
sarif-fmt/tests/: clang-tidy-test.rs  clippy-test.rs  cppcheck-test.rs  deny-test.rs  hadolint-test.rs  shellcheck-test.rs
sarif-fmt/tests/data/: Cargo.toml  Dockerfile  clang-tidy.out  cpp.cpp  deny.out  hadolint.out  shell.sh  shellcheck.out
sarif-fmt/tests/data/src/: main.rs
serde-sarif/: .gitignore  Cargo.toml  README.md  build.rs  cliff.toml
serde-sarif/src/: lib.rs  sarif.rs  schema.json
serde-sarif/src/converters/: cargo.rs  clang_tidy.rs  clippy.rs  cppcheck.rs  deny.rs  hadolint.rs  miri.rs  mod.rs  shellcheck.rs
serde-sarif/tests/: version-numbers.rs
shellcheck-sarif/: Cargo.toml  README.md  cliff.toml
shellcheck-sarif/src/: bin.rs
