[package]
name = "clang-tidy-sarif"
version = "0.4.2"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "Convert clang-tidy output to SARIF"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "clang-tidy", "clang", "lint", "cli"]
categories = ["command-line-utilities"]
homepage  = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/clang_tidy_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[[bin]]
name = "clang-tidy-sarif"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.75"
serde-sarif = { path = "../serde-sarif", version = "0.4.2", features = ["clang-tidy-converters"] }
clap = { version = "4.4.2", features = ["derive"] }
duct = "0.13.6"

[dev-dependencies]
version-sync = "0.9"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }"
pkg-fmt = "bin"
