[package]
name = "clippy-sarif"
version = "0.3.4"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "Convert clippy output to SARIF"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "clippy", "cli"]
categories = ["command-line-utilities"]
homepage  = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/clippy_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[[bin]]
name = "clippy-sarif"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.65"
serde-sarif = { path = "../serde-sarif", version = "0.3.4", features = ["clippy-converters"] }
clap = "4.0.4"

[dev-dependencies]
version-sync = "0.9"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }"
pkg-fmt = "bin"
