[package]
name = "clippy-sarif"
version = "0.6.5"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "Convert clippy output to SARIF"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "clippy", "cli"]
categories = ["command-line-utilities"]
homepage  = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/clippy_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[[bin]]
name = "clippy-sarif"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.86"
serde-sarif = { path = "../serde-sarif", version = "0.6.5", features = ["clippy-converters"] }
clap = { version = "4.5.15", features = ["derive"] }

[dev-dependencies]
version-sync = "0.9"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }"
pkg-fmt = "bin"
