[package]
name = "hadolint-sarif"
version = "0.4.2"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "Convert hadolint output to SARIF"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "hadolint", "docker", "cli"]
categories = ["command-line-utilities"]
homepage  = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/hadolint_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[[bin]]
name = "hadolint-sarif"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.75"
serde-sarif = { path = "../serde-sarif", version = "0.4.2", features = ["hadolint-converters"] }
clap = { version = "4.4.5", features = ["derive"] }

[dev-dependencies]
version-sync = "0.9"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }"
pkg-fmt = "bin"
