[package]
name = "sarif-fmt"
version = "0.6.6"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "View (pretty print) SARIF files in terminal"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "fmt", "cli", "terminal"]
categories = ["command-line-utilities"]
homepage  = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/clippy_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[[bin]]
name = "sarif-fmt"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.90"
codespan-reporting = "0.11.1"
serde-sarif = { path = "../serde-sarif", version = "0.6.6" }
serde_json = "1.0.129"
clap = { version = "4.5.20", features = ["derive"] }

[dev-dependencies]
duct = "0.13.7"
duct_sh = "0.13.7"
version-sync = "0.9"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }"
pkg-fmt = "bin"
