[package]
name = "sarif-fmt"
version = "0.8.0"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "View (pretty print) SARIF files in terminal"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "fmt", "cli", "terminal"]
categories = ["command-line-utilities"]
homepage = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/clippy_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[[bin]]
name = "sarif-fmt"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.98"
codespan-reporting = "0.12.0"
serde-sarif = { path = "../serde-sarif", version = "0.8.0" }
serde_json = "1.0.142"
clap = { version = "4.5.42", features = ["derive"] }

[dev-dependencies]
duct = "1.1.0"
duct_sh = "1.0.0"
version-sync = "0.9"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }"
pkg-fmt = "bin"
