[package]
name = "serde-sarif"
version = "0.8.0"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "Serde serialization for SARIF files"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "serde", "serialization"]
categories = ["encoding"]
build = "build.rs"
homepage = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/serde_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[features]
default = []
clippy-converters = ["cargo_metadata", "regex", "anyhow"]
miri-converters = ["cargo_metadata", "regex", "anyhow"]
hadolint-converters = ["anyhow"]
shellcheck-converters = ["anyhow"]
clang-tidy-converters = ["regex", "anyhow", "once_cell"]
opt-builder = []

[dependencies]
anyhow = { version = "1.0.98", optional = true }
cargo_metadata = { version = "0.19.2", optional = true }
regex = { version = "1.11.1", optional = true }
serde = "1.0.219"
serde_json = "1.0.142"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0.12"
typed-builder = "0.21.0"
once_cell = { version = "1.21.3", optional = true }

[dev-dependencies]
version-sync = "0.9"

[build-dependencies]
anyhow = "1.0.98"
prettyplease = "0.2.36"
proc-macro2 = "1.0.97"
quote = "1.0.40"
schemafy_lib = "0.6.0"
serde_json = "1.0.142"
syn = "2.0.105"
