[package]
name = "shellcheck-sarif"
version = "0.2.26"
authors = ["Paul Sastrasinh <psastras@gmail.com>"]
edition = "2018"
description = "Convert shellcheck output to SARIF"
license = "MIT"
readme = "README.md"
keywords = ["sarif", "shellcheck", "shell", "cli"]
categories = ["command-line-utilities"]
homepage  = "https://psastras.github.io/sarif-rs/"
documentation = "https://docs.rs/shellcheck_sarif"
repository = "https://github.com/psastras/sarif-rs"

[badges]
github = { repository = "psastras/sarif-rs" }

[[bin]]
name = "shellcheck-sarif"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.52"
serde-sarif = { path = "../serde-sarif", version = "0.2.26", features = ["shellcheck-converters"] }
clap = "3.0.8"

[dev-dependencies]
version-sync = "0.9"
